# pose-graph-initialization

./: CMakeLists.txt  README.md
examples/: cpp_example.cpp
scripts/: get_image_similarity.py
src/pyposegraphbuilder/: __init__.py
src/pyposegraphbuilder/include/: feature_utils.h  general_graph.h  graph_traversal.h  imagesimilarity_graph.h  matcher.h  pinhole_camera.h  point_track.h  pose.h  pose_graph.h  pose_graph_builder.cpp  pose_graph_builder.h  pose_utils.h  reconstruction.h  types.h  utils.h  view.h  visibility_table.h
src/pyposegraphbuilder/src/: bindings.cpp
